--- a/main.css
+++ b/main.css
@@ -1,9 +1,14 @@
 body {
     display: flex;
     flex-direction: column;
+    
     min-width: 375px;
     background-color: #faf9f6;
   }
+
+header {
+  margin-bottom: 4%;
+}
 
 img {
     width: 40%;
@@ -33,8 +38,13 @@ img {
     margin-left: 21%;
 }
 
+#login {
+  margin-top: -4%;
+  margin-bottom: 3%;
+}
+
 .auth {
-    position: relative;
+    position: absolute;
     left: 50%;
     transform: translateX(-50%);
     margin-bottom: 4%;
@@ -56,7 +66,7 @@ img {
 
 .auth:hover {
     background: rgba(255,255,255,0.9);
-    box-shadow: 0 14px 24px rgb(93 93 93 / 30%);
+    box-shadow: 0 12px 22px rgb(93 93 93 / 35%);
 }
 
 a {
@@ -84,6 +94,6 @@ a:link {
 
 footer {
     margin-left: 1%;
-    margin-top: 7.5%;
+    margin-top: 17%;
 }
   
