Made minor adjustments for clarity

--- a/main.css
+++ b/main.css
@@ -1,9 +1,8 @@
 body {
     display: flex;
     flex-direction: column;
-    
     min-width: 375px;
-    background-color: #faf9f6;
+    background-color: #fff;
   }
 
 header {
@@ -93,7 +92,7 @@ a:link {
   }
 
 footer {
-    margin-left: 1%;
-    margin-top: 17%;
+    margin-left: 0.5%;
+    margin-top: 17.7%;
 }
   
