--- a/auth.css
+++ b/auth.css
@@ -3,7 +3,7 @@ body {
     flex-direction: column;
     align-items: center;
     min-width: 375px;
-    background-color: #faf9f6;
+    background-color: #fff;
 }
 
 header {
@@ -13,12 +13,15 @@ header {
     font-size: 50px;
 }
 
+main {
+    font-family: 'Poppins', sans-serif;
+}
+
 .auth {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 50px 40px;
-    font-family: 'Lucida Grande';
     font-weight:lighter;
     color: #fff;
     background: #dee2d9;
